# tomocupy-stream

./: .gitignore  CMakeLists.txt  README.rst  pyproject.toml  ruff.toml  setup.py
.devcontainer/: Dockerfile  devcontainer.json
scripts/: ruff.sh  update_version.py
src/: linerec.py
src/cuda/: CMakeLists.txt  cfunc_filter.cu  cfunc_fourierrec.cu  cfunc_fourierrec.i  cfunc_fourierrecfp16.i
src/include/: cfunc_fourierrec.cuh  kernels_linerec.cuh
src/streamtomocupy/: __init__.py  cfunc_fft2d.py  cfunc_filter.py  cfunc_filterfp16.py  cfunc_fourierrec.py  cfunc_fourierrecfp16.py  cfunc_linerec.py  cfunc_linerecfp16.py  cfunc_lprec.py  cfunc_lprecfp16.py  cfunc_usfft1d.py  cfunc_usfft2d.py  chunking.py  config.py  fbp_filter.py  find_center.py  fourierrec.py  linerec.py  lprec.py  proc.py  rec.py  remove_stripe.py  retrieve_phase.py  streamrecon.py  utils.py
tests/: test.conf  test.ipynb  test_2k.py  test_rec.py  test_rec_manual.py  test_rec_steps.py
tests/daniil/: daniil.conf  tomocupy.py  tomocupy_new.py
tests/goran/: goran.conf  goran_rec_steps.py
